# EmoDetect

./: .gitignore  CMakeLists.txt  README  README.md  parse.sh
config/: cmakeconfig.h.in
data/: CMakeLists.txt
data/gabor/: Cgabor_0_0.data  Cgabor_0_1.data  Cgabor_0_2.data  Cgabor_0_3.data  Cgabor_0_4.data  Cgabor_0_5.data  Cgabor_0_6.data  Cgabor_0_7.data  Cgabor_1_0.data  Cgabor_1_1.data  Cgabor_1_2.data  Cgabor_1_3.data  Cgabor_1_4.data  Cgabor_1_5.data  Cgabor_1_6.data  Cgabor_1_7.data  Cgabor_2_0.data  Cgabor_2_1.data  Cgabor_2_2.data  Cgabor_2_3.data  Cgabor_2_4.data  Cgabor_2_5.data  Cgabor_2_6.data  Cgabor_2_7.data  Cgabor_3_0.data  Cgabor_3_1.data  Cgabor_3_2.data  Cgabor_3_3.data  Cgabor_3_4.data  Cgabor_3_5.data  Cgabor_3_6.data  Cgabor_3_7.data  Cgabor_4_0.data  Cgabor_4_1.data  Cgabor_4_2.data  Cgabor_4_3.data  Cgabor_4_4.data  Cgabor_4_5.data  Cgabor_4_6.data  Cgabor_4_7.data  (+80 more)
data/xml/: ANN_moments.xml  ANN_phog.xml  RT_PHoG_final.xml  RT_gabor.xml  RT_haar_final.xml  RT_moments_final.xml  SVM_moments.xml
include/FeatureExtractors/: extractFeatures.h  extractGabor.h  extractHaar.h  extractMoments.h  extractPHoG.h
include/Infrastructure/: defines.h  exceptions.h
include/LearningAlgorithms/: ann.h  learningAlgorithms.h  rt.h  svm.h
src/: CMakeLists.txt  allFilesInaDir.cpp  demo.cpp  extractGaborMain.cpp  extractHaarMain.cpp  extractHoG.cpp  extractMoments.cpp  extractMomentsMain.cpp  extractPHoGMain.cpp  phog.h  readImage.cpp  t-TestRT.cpp  t-TestSVM.cpp  test.cpp  train.cpp  trainAndCrossValidateRT.cpp  trainAndCrossValidateSVM.cpp  trainAndTestAllAlgos.cpp  trainAndValidate.cpp  trainAndValidateAllAlgos.cpp  validateHuman.cpp
src/FeatureExtractors/: CMakeLists.txt  extractFeatures.cpp  extractGabor.cpp  extractHaar.cpp  extractMoments.cpp  extractPHoG.cpp
src/Infrastructure/: exceptions.cpp
src/LearningAlgorithms/: ann.cpp  learningAlgorithms.cpp  rt.cpp  svm.cpp
