install( FILES
    gabor/Cgabor_0_0.bmp
    gabor/Cgabor_0_0.data
    gabor/Cgabor_0_1.bmp
    gabor/Cgabor_0_1.data
    gabor/Cgabor_0_2.bmp
    gabor/Cgabor_0_2.data
    gabor/Cgabor_0_3.bmp
    gabor/Cgabor_0_3.data
    gabor/Cgabor_0_4.bmp
    gabor/Cgabor_0_4.data
    gabor/Cgabor_0_5.bmp
    gabor/Cgabor_0_5.data
    gabor/Cgabor_0_6.bmp
    gabor/Cgabor_0_6.data
    gabor/Cgabor_0_7.bmp
    gabor/Cgabor_0_7.data
    gabor/Cgabor_1_0.bmp
    gabor/Cgabor_1_0.data
    gabor/Cgabor_1_1.bmp
    gabor/Cgabor_1_1.data
    gabor/Cgabor_1_2.bmp
    gabor/Cgabor_1_2.data
    gabor/Cgabor_1_3.bmp
    gabor/Cgabor_1_3.data
    gabor/Cgabor_1_4.bmp
    gabor/Cgabor_1_4.data
    gabor/Cgabor_1_5.bmp
    gabor/Cgabor_1_5.data
    gabor/Cgabor_1_6.bmp
    gabor/Cgabor_1_6.data
    gabor/Cgabor_1_7.bmp
    gabor/Cgabor_1_7.data
    gabor/Cgabor_2_0.bmp
    gabor/Cgabor_2_0.data
    gabor/Cgabor_2_1.bmp
    gabor/Cgabor_2_1.data
    gabor/Cgabor_2_2.bmp
    gabor/Cgabor_2_2.data
    gabor/Cgabor_2_3.bmp
    gabor/Cgabor_2_3.data
    gabor/Cgabor_2_4.bmp
    gabor/Cgabor_2_4.data
    gabor/Cgabor_2_5.bmp
    gabor/Cgabor_2_5.data
    gabor/Cgabor_2_6.bmp
    gabor/Cgabor_2_6.data
    gabor/Cgabor_2_7.bmp
    gabor/Cgabor_2_7.data
    gabor/Cgabor_3_0.bmp
    gabor/Cgabor_3_0.data
    gabor/Cgabor_3_1.bmp
    gabor/Cgabor_3_1.data
    gabor/Cgabor_3_2.bmp
    gabor/Cgabor_3_2.data
    gabor/Cgabor_3_3.bmp
    gabor/Cgabor_3_3.data
    gabor/Cgabor_3_4.bmp
    gabor/Cgabor_3_4.data
    gabor/Cgabor_3_5.bmp
    gabor/Cgabor_3_5.data
    gabor/Cgabor_3_6.bmp
    gabor/Cgabor_3_6.data
    gabor/Cgabor_3_7.bmp
    gabor/Cgabor_3_7.data
    gabor/Cgabor_4_0.bmp
    gabor/Cgabor_4_0.data
    gabor/Cgabor_4_1.bmp
    gabor/Cgabor_4_1.data
    gabor/Cgabor_4_2.bmp
    gabor/Cgabor_4_2.data
    gabor/Cgabor_4_3.bmp
    gabor/Cgabor_4_3.data
    gabor/Cgabor_4_4.bmp
    gabor/Cgabor_4_4.data
    gabor/Cgabor_4_5.bmp
    gabor/Cgabor_4_5.data
    gabor/Cgabor_4_6.bmp
    gabor/Cgabor_4_6.data
    gabor/Cgabor_4_7.bmp
    gabor/Cgabor_4_7.data
    gabor/FFTgabor_0_0.data
    gabor/FFTgabor_0_1.data
    gabor/FFTgabor_0_2.data
    gabor/FFTgabor_0_3.data
    gabor/FFTgabor_0_4.data
    gabor/FFTgabor_0_5.data
    gabor/FFTgabor_0_6.data
    gabor/FFTgabor_0_7.data
    gabor/FFTgabor_1_0.data
    gabor/FFTgabor_1_1.data
    gabor/FFTgabor_1_2.data
    gabor/FFTgabor_1_3.data
    gabor/FFTgabor_1_4.data
    gabor/FFTgabor_1_5.data
    gabor/FFTgabor_1_6.data
    gabor/FFTgabor_1_7.data
    gabor/FFTgabor_2_0.data
    gabor/FFTgabor_2_1.data
    gabor/FFTgabor_2_2.data
    gabor/FFTgabor_2_3.data
    gabor/FFTgabor_2_4.data
    gabor/FFTgabor_2_5.data
    gabor/FFTgabor_2_6.data
    gabor/FFTgabor_2_7.data
    gabor/FFTgabor_3_0.data
    gabor/FFTgabor_3_1.data
    gabor/FFTgabor_3_2.data
    gabor/FFTgabor_3_3.data
    gabor/FFTgabor_3_4.data
    gabor/FFTgabor_3_5.data
    gabor/FFTgabor_3_6.data
    gabor/FFTgabor_3_7.data
    gabor/FFTgabor_4_0.data
    gabor/FFTgabor_4_1.data
    gabor/FFTgabor_4_2.data
    gabor/FFTgabor_4_3.data
    gabor/FFTgabor_4_4.data
    gabor/FFTgabor_4_5.data
    gabor/FFTgabor_4_6.data
    gabor/FFTgabor_4_7.data
    gabor/Sgabor_0_0.bmp
    gabor/Sgabor_0_0.data
    gabor/Sgabor_0_1.bmp
    gabor/Sgabor_0_1.data
    gabor/Sgabor_0_2.bmp
    gabor/Sgabor_0_2.data
    gabor/Sgabor_0_3.bmp
    gabor/Sgabor_0_3.data
    gabor/Sgabor_0_4.bmp
    gabor/Sgabor_0_4.data
    gabor/Sgabor_0_5.bmp
    gabor/Sgabor_0_5.data
    gabor/Sgabor_0_6.bmp
    gabor/Sgabor_0_6.data
    gabor/Sgabor_0_7.bmp
    gabor/Sgabor_0_7.data
    gabor/Sgabor_1_0.bmp
    gabor/Sgabor_1_0.data
    gabor/Sgabor_1_1.bmp
    gabor/Sgabor_1_1.data
    gabor/Sgabor_1_2.bmp
    gabor/Sgabor_1_2.data
    gabor/Sgabor_1_3.bmp
    gabor/Sgabor_1_3.data
    gabor/Sgabor_1_4.bmp
    gabor/Sgabor_1_4.data
    gabor/Sgabor_1_5.bmp
    gabor/Sgabor_1_5.data
    gabor/Sgabor_1_6.bmp
    gabor/Sgabor_1_6.data
    gabor/Sgabor_1_7.bmp
    gabor/Sgabor_1_7.data
    gabor/Sgabor_2_0.bmp
    gabor/Sgabor_2_0.data
    gabor/Sgabor_2_1.bmp
    gabor/Sgabor_2_1.data
    gabor/Sgabor_2_2.bmp
    gabor/Sgabor_2_2.data
    gabor/Sgabor_2_3.bmp
    gabor/Sgabor_2_3.data
    gabor/Sgabor_2_4.bmp
    gabor/Sgabor_2_4.data
    gabor/Sgabor_2_5.bmp
    gabor/Sgabor_2_5.data
    gabor/Sgabor_2_6.bmp
    gabor/Sgabor_2_6.data
    gabor/Sgabor_2_7.bmp
    gabor/Sgabor_2_7.data
    gabor/Sgabor_3_0.bmp
    gabor/Sgabor_3_0.data
    gabor/Sgabor_3_1.bmp
    gabor/Sgabor_3_1.data
    gabor/Sgabor_3_2.bmp
    gabor/Sgabor_3_2.data
    gabor/Sgabor_3_3.bmp
    gabor/Sgabor_3_3.data
    gabor/Sgabor_3_4.bmp
    gabor/Sgabor_3_4.data
    gabor/Sgabor_3_5.bmp
    gabor/Sgabor_3_5.data
    gabor/Sgabor_3_6.bmp
    gabor/Sgabor_3_6.data
    gabor/Sgabor_3_7.bmp
    gabor/Sgabor_3_7.data
    gabor/Sgabor_4_0.bmp
    gabor/Sgabor_4_0.data
    gabor/Sgabor_4_1.bmp
    gabor/Sgabor_4_1.data
    gabor/Sgabor_4_2.bmp
    gabor/Sgabor_4_2.data
    gabor/Sgabor_4_3.bmp
    gabor/Sgabor_4_3.data
    gabor/Sgabor_4_4.bmp
    gabor/Sgabor_4_4.data
    gabor/Sgabor_4_5.bmp
    gabor/Sgabor_4_5.data
    gabor/Sgabor_4_6.bmp
    gabor/Sgabor_4_6.data
    gabor/Sgabor_4_7.bmp
    gabor/Sgabor_4_7.data
DESTINATION data/gabor)
install( FILES
    xml/ANN_moments.xml
    xml/ANN_phog.xml
    xml/RT_gabor.xml
    xml/RT_haar_final.xml
    xml/RT_moments_final.xml
    xml/RT_PHoG_final.xml
    xml/SVM_gabor.xml
    xml/SVM_haar.xml
    xml/SVM_moments.xml
    xml/SVM_PHoG.xml
  DESTINATION data/xml)
